
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct ref {int dummy; } ;


 struct ref* alloc_ref (char const*) ;
 int tail_link_ref (struct ref*,struct ref***) ;

__attribute__((used)) static struct ref *make_linked_ref(const char *name, struct ref ***tail)
{
 struct ref *ret = alloc_ref(name);
 tail_link_ref(ret, tail);
 return ret;
}
