; ModuleID = '/home/carl/AnghaBench/git/extr_remote.c_make_linked_ref.c'
source_filename = "/home/carl/AnghaBench/git/extr_remote.c_make_linked_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ref = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.ref* (i8*, %struct.ref***)* @make_linked_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.ref* @make_linked_ref(i8* %0, %struct.ref*** %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.ref***, align 8
  %5 = alloca %struct.ref*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.ref*** %1, %struct.ref**** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call %struct.ref* @alloc_ref(i8* %6)
  store %struct.ref* %7, %struct.ref** %5, align 8
  %8 = load %struct.ref*, %struct.ref** %5, align 8
  %9 = load %struct.ref***, %struct.ref**** %4, align 8
  %10 = call i32 @tail_link_ref(%struct.ref* %8, %struct.ref*** %9)
  %11 = load %struct.ref*, %struct.ref** %5, align 8
  ret %struct.ref* %11
}

declare dso_local %struct.ref* @alloc_ref(i8*) #1

declare dso_local i32 @tail_link_ref(%struct.ref*, %struct.ref***) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
